MultiClusterSMMDemo/Web/peerauth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "opencart"
spec:
  mtls:
    mode: PERMISSIVE
