MultiClusterSMMDemo/Web/oc_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: smm-openart
  name: smm-openart
  namespace: opencart
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: smm-opencart
status:
  loadBalancer: {}
