MultiClusterSMMDemo/Web/oc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencart-ingress
  namespace: opencart
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.milab.local
    secretName: mynginx-tls
  rules:
  - host: "demo.milab.local"
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: smm-openart
              port:
                number: 80
